<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dash">- </string>
    <string name="GoTest">Към теста </string>
   <string name="Spacee"> </string>
    <string name="app_name">Бургас</string>
    <string name="introduction">Добре дошли!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">СТАРТ</string>
    <string name="more_info">ИНФО</string>
    <string name="title_activity_two">Two</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_intro_test">IntroTest</string>
    <string name="Blank">--------------------</string>
    <string name="BlankSmall">---</string>
    <string name="Answer">Отговор :</string>
    <string name="Next">Напред</string>
    <string name="FirstOperation">a+b  =</string>
    <string name="SecondOperation">a*b  =</string>
    <string name="title_activity_list">Категории</string>
    <string name="Information">Моля,въведете решението на задачата за да продължите напред.</string>
    <string name="Category2">Икономика и инфраструктура</string>
    <string name="Category1">История на града</string>
    <string name="Category3">Култура и забавления</string>
    <string name="Category4">Образование и наука</string>
    <string name="Final">Край</string>
    <string name="title_activity_category_one">Category_one</string>
    <string name="Category1_desc">Бургас е разположен в т.нар. Бургаско плато, което се отличава с мек климат и плодородни почви. Тези фактори са причина за заселването на района още хилядолетия преди античността. Сред първите жители на региона са траките, които около 6 век пр.н.е. създават редица селища на територията . Името Бургас произлиза от латинската дума "Бургос", което се превежда като кула.В античността Бургас е бил малък римски град, наричан Деултум. По-късно е бил известен като Дебелт, което служи за име на днешното село Дебелт. През Средновековието е била издигната малка крепост, служеща за наблюдателница и именно тя е била наречена Пиргос. През 1332 година Иван-Александър побеждава император Андроник III Палеолог западно от днешния Бургас в последната голяма битка между Българското царство и Византия — Битката при Русокастро. Цялата история на Бургас е свързана с морето. Самото месторазположение на града, обиколен от трите страни с вода, е първопричина за неговото възникване и развитие. Бургас е разположен в т.нар. Бургаско плато, което се отличава с мек климат и плодородни почви. Тези фактори са причина за заселването на района още хилядолетия преди античността. </string>
    <string name="Category2_desc">Бургас се състои от централната част, жилищни комплекси, квартали, вилно и рибарско селище. Една част от тях исторически се срастват с града, други са били преди това съставни селища на Община Бургас, трети стават част от града след административни реформи. Освен централната градска част (ЦГЧ), като централни се числят комплексите Братя Миладинови, Възраждане и Лазур. Другите части на града са жилищните комплекси Меден рудник, Петко Славейков, Зорница, Изгрев, както и кварталите Акациите, Банево, Ветрен, Горно Езерово, Долно Езерово, Лозово, Победа, Сарафово, Крайморие. Ексклави на Бургас се явяват рибарското селище Ченгене скеле в парк Росенец, вилно селище Отманлии в местността Алатепе и остров Света Анастасия.
В Бургас е седалището на производителя на стомана, стоманени елементи и стоманени ребра Промет АД. Стоманодобивният завод има капацитет от 0,8 милиона тона годишно. По-големите компании в машиностроенето включват: Булярд — Корабостроителна индустрия, Бургаски корабостроителници, Кораборемонтен завод Бургас, производителя на товарни вагони Трансвагон, Елкабел и др. Фирми от дървообработващата промишленост са Кроношпан, Детелина и Дограма, които обработват дървесина от близките Стара и Странджа планина. Строителството не е сред основните сектори на Бургас. Въпреки това седалищата на някои от по-големите български фирми в този бранш: Понс Холдинг, Трансстрой — Бургас АД и Евробилдинг Инженеринг, се намират в града.
С капацитет за обработка 176 800 барела петрол на ден, построеният през 1964 година НХК (днес Лукойл Нефтохим Бургас) е най-голямата рафинерия в Югоизточна Европа. От 1999 тя принадлежи на руската компания Лукойл, която в края на януари 2012 година обяви допълнителни инвестиции до 2015 година в размер 1,5 млд. щатски долара и създаването на 3000 нови работни места.
        
    </string>
    <string name="Category3_desc">Бургас разполага с драматичен, детски и куклен театър, опера, концертна зала и много художествени галерии. Морският град е един от малкото градове в България, които разполагат с Театър за драма, опера и балет (Бургаска опера). Драматичният театър Адриана Будевска се намира до Стария съд (днес „Агенция по вписванията“) в запазената стара градска част на града. Бургас е един от малкото български градове, в които функционира Младежки културен център.Той се използва и от фолклорния ансамбъл „Странджа“. Ансамбълът, който е основан през 1965 година, се състои от хор, оркестър и танцова формация. През 2011 година старото морско казино е обновено и превърнато в културен център. Прояви от различен тип и изложби се организират и в „Културния дом на Нефтохимика“, а за изложби на военна тематика често се използва Гарнизонният военен клуб. Като малки културни домове с място за прояви и клубни дейности функционират и кварталните читалища.

Градът е известен на българската художествена сцена с множеството си галерии. Художествените колекции на града са настанени в градска художествена галерия „Петко Задгорски“.
Бургас разполага с множество спортни съоръжения, някои от които са най-модерните в България. По-важните спортни зали, които са намират в града, са зала „Бойчо Брънзов“ (зала „Изгрев“), зала „Богориди“, баскетболна зала „Нефтохимик“ и зала „Младост“, като последната е многофункционална. През 2009 година в жилищен комплекс Меден рудник отваря врати друга многофункционална зала с площ от 2.585 m². Тя носи името на първия български олимпийски медалист, Никола Станчев. През 2010 година е открит спортен комплекс „Изгрев“, а на следващата година спортен комплекс „Славейков“, където се намира и най-голямата изкуствена стена за катерене на открито.  В момента тече строителството на нова многофункционална спортна зала „Арена Бургас“, която се очаква да бъде пусната в експлоатация през 2017-2018 г. Тя ще даде  възможност за провеждане на международни спортни състезания.
        
    </string>
    <string name="Category4_desc">Бургас като университетски център разполага с две висши училища:
- Бургаски свободен университет (БСУ) е създаден с решение на Великото народно събрание от 18.09.1991 г. и е един от първите частни университети в страната.  Университетът е акредитиран от Националната агенция за оценяване и акредитация и е носител на Международен сертификат за качество ISO 9001:2008.
БСУ е модерен, иновативен и ориентиран към студентите и тяхната професионална реализация университет със значими академични постижения и утвърден международен статус:
БСУ е член на Европейската асоциация на университетите (ЕUA).
Има договори за сътрудничество с 36 университета и организации в Европа, Америка, Азия и Африка 
Работи по 24 договора с университети в Европа за обмен на студенти и преподаватели.
Участва в Европейската система за натрупване и трансфер на образователни кредити (ЕCTS).
Работи по съвместни международни проекти с повече от 100 университета и организации.
БСУ е партньор на ЮНЕСКО по програмата UNITWIN/UNESCO Chairs и e институция домакин на Катедра на ЮНЕСКО по правата на човека и култура на мира.
- „Асен Златаров“ е основан през 1963 година като Висш химико-технологически институт. Днес той включва в структурата си също 3 автономни колежа: Колеж по туризъм, Технически и Медицински колеж. Колежът по туризъм е открит през 1967 година и е първото учебно заведение по туризъм в България.
Най-старото училище в Бургас е създаденото през 1869 година СОУ с хуманитарно-естетически профил „Св. св. Кирил и Методий“. Немската езикова гимназия „Гьоте“ работи със специалисти и учители от Германия. Търговската гимназия, която е открита през 1905 година, работи заедно с австрийското Министерство на образованието и немския град Бенсхайм по няколко екологични проекти. Учениците на Природо-математическата гимназия „Акад. Н. Обрешков“ редовно печелят отличия от международни олимпиади и конкурси. Други по-важни училища са Руската езикова гимназия ; Английската езикова гимназия "Гео Милев"; Гимназията за романски езици „Г. С. Раковски“; Гимназията по строителство, архитектура и геодезия; Музикалното училище „Панчо Владигеров“; както и професионалните гимназии по механика, по електроника и електротехника, по морско корабоплаване и риболов и тази по химични технологии.
Наред с университетските библиотеки в Бургас се намира създадената през 1888 година градска библиотека. Тя носи от 1978 година името на поета-революционер Пейо Яворов и е една от най-старите в страната. От 2000 година е със статут на регионална. В кварталите и комплексите съществуват малки читални и над десет читалища, които също разполагат с малки библиотеки.
        
    </string>
    <string name="title_activity_category_two">Category_two</string>
    <string name="title_activity_categoty_three">Categoty_three</string>
    <string name="title_activity_category_four">Category_four</string>
    <string name="title_activity_exam">Exam</string>
    <string name="Quest">Въпрос:</string>
    <string name="next">Следващ въпрос ></string>
    <string name="check">Провери</string>
    <string name="title_activity_final">Final</string>
    <string name="title_activity_final_screen">FinalScreen</string>
    <string name="add">Добави в ранклистата</string>
    <string name="addname">Име: </string>
    <string name="YourResult">Твоят резултат е :   </string>
    <string name="title_activity_ranklist">Ranklist</string>

</resources>