<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/INTO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5DEB3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.burgas_landmarks.IntroTest" >

            <EditText
                android:id="@+id/ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toRightOf="@+id/linearLayout1"
                android:ems="10"
                android:hint="a=?"
                android:inputType="number" 
            />

            <TextView
                android:id="@+id/Result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Result2"
                android:layout_below="@+id/Result2"
                android:layout_marginTop="40dp"
                android:text="@string/BlankSmall"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ans1"
                android:layout_below="@+id/ans1"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="b=?"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/ans1"
                android:ems="10"
                android:text="@string/Information"
                android:textColor="#BC8F8F"
                android:textSize="18sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Next" />

    <TextView
        android:id="@+id/Result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ans1"
        android:layout_alignTop="@+id/linearLayout1"
        android:text="@string/BlankSmall"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="29dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Quest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/FirstOperation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Blank1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Blank"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/SecondOperation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Blank2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/Blank"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="21dp"
        android:text="@string/Answer"
        android:textSize="20sp" />

</RelativeLayout>